--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "e4253e37-a807-4a6a-91a4-87b21ad1f734"
 authors = ["Panquesito7"]
 version = "0.1.0"
 
+[deps]
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+
 [compat]
 julia = "1.6"
 
