--- a/Project.toml
+++ b/Project.toml
@@ -4,11 +4,12 @@ authors = ["Panquesito7"]
 version = "0.1.0"
 
 [deps]
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 
 [compat]
+DataStructures = "0.18"
 julia = "1.6"
 
 [extras]
