--- a/.github/workflows/directory_workflow.yml
+++ b/.github/workflows/directory_workflow.yml
@@ -18,16 +18,21 @@ jobs:
           for fname in `find . -type f -name '*.jl' -o -name '*.jl'`
           do
             echo "${fname}"
-            new_fname=`echo ${fname} | tr ' ' '_'`
-            echo "      ${new_fname}"
-            new_fname=`echo ${new_fname} | tr 'A-Z' 'a-z'`
-            echo "      ${new_fname}"
-            new_fname=`echo ${new_fname} | tr '-' '_'`
-            echo "      ${new_fname}"
-            if [ ${fname} != ${new_fname} ]
+            if [ "${fname}" == "./src/TheAlgorithms.jl" ]
             then
-              echo "      ${fname} --> ${new_fname}"
-              git "mv" "${fname}" ${new_fname}
+              continue
+            else
+              new_fname=`echo ${fname} | tr ' ' '_'`
+              echo "      ${new_fname}"
+              new_fname=`echo ${new_fname} | tr 'A-Z' 'a-z'`
+              echo "      ${new_fname}"
+              new_fname=`echo ${new_fname} | tr '-' '_'`
+              echo "      ${new_fname}"
+              if [ ${fname} != ${new_fname} ]
+              then
+                echo "      ${fname} --> ${new_fname}"
+                git "mv" "${fname}" ${new_fname}
+              fi
             fi
           done
           git commit -am "Formatting filenames ${GITHUB_SHA::8}" || true
