--- a/.github/workflows/directory_writer.yml
+++ b/.github/workflows/directory_writer.yml
@@ -10,7 +10,7 @@ on: [push]
   #        │  │ │ │ │
   #        │  │ │ │ │
   #        *  * * * *
-  #- cron: '21 * * * *'
+  #- cron: '0 0 * * *'
   #workflow_dispatch:
 jobs:
   build:
