--- a/.github/workflows/directory_writer.yml
+++ b/.github/workflows/directory_writer.yml
@@ -11,7 +11,7 @@ on: [push]
   #        │  │ │ │ │
   #        *  * * * *
   #- cron: '0 0 * * *'
-  #workflow_dispatch:
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
